fix slider spacing issues on mobile view

--- a/docs/style.css
+++ b/docs/style.css
@@ -19,6 +19,7 @@ main {
   background-color: rgb(255, 186, 82);
   width: 100%;
   margin: 10px;
+  gap: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,7 +31,6 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(60px, 500px));
   grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 10px;
   justify-content: space-around;
 }
 
@@ -77,14 +77,17 @@ main {
 }
 
 .slider {
+  position: relative;
   display: flex;
   flex-direction: row;
-  width: 70%;
+  width: 100%;
   align-items: center;
+  justify-content: center;
+  padding: 10px;
 }
 #slider {
   -webkit-appearance: none;
-  width: 100%;
+  width: 70%;
   height: 7px;
   outline: none;
   border-radius: 3px;
@@ -103,7 +106,7 @@ main {
 
 #SelectValue {
   width: 10%;
-  height: 50%;
+  height: 100%;
   top: 0;
   background-color: #8fd63e;
   border-radius: 4px;
